--- a/MyAirlineApplication/app/src/main/res/layout/activity_launch_search.xml
+++ b/MyAirlineApplication/app/src/main/res/layout/activity_launch_search.xml
@@ -4,68 +4,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".LaunchSearchActivity">
 
     <TextView
-        android:id="@+id/hello"
+        android:id="@+id/flightdetailstitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_parth"
+        android:text="@string/searchflightdetails"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.134" />
+        app:layout_constraintVertical_bias="0.137" />
 
-    <Button
-        android:id="@+id/launchaddflight"
+    <EditText
+        android:id="@+id/searchairlinename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="launchaddflight"
-        android:text="@string/addflight"
+        android:hint="@string/airline_name_entry"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/hello"
-        app:layout_constraintVertical_bias="0.187" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.199" />
 
-    <Button
-        android:id="@+id/launchsearch"
+    <EditText
+        android:id="@+id/searchsource"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="launchsearch"
+        android:hint="@string/source_entry"
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.293" />
+
+    <EditText
+        android:id="@+id/searchdestination"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/dest_entry"
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.39" />
+
+    <Button
+        android:id="@+id/searchflights"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="280dp"
+        android:onClick="searchflights"
         android:text="@string/searchflights"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/hello"
-        app:layout_constraintVertical_bias="0.339" />
-
-    <Button
-        android:id="@+id/launchdelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="launchdelete"
-        android:text="@string/launchdelete"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/hello"
-        app:layout_constraintVertical_bias="0.471" />
-
-    <Button
-        android:id="@+id/launchhelp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="launchreadme"
-        android:text="@string/help"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/hello"
-        app:layout_constraintVertical_bias="0.623" />
+        app:layout_constraintRight_toRightOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
